# check_email

./: Dockerfile  README.md  docker-compose-es.yml  docker-compose.yml  env.example  filebeat.yml  main.py  metricbeat.yml  pyproject.toml
src/core/: asgi.py  settings.py  urls.py
src/mail_ru/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
src/mail_ru/templates/mail_ru/: index.html  mail_detail.html  mail_list.html
