[tool.poetry]
name = "check-email"
version = "0.1.0"
packages = [
    {include = 'src'},
]
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
chardet = "^5.2.0"
django = "4.2"
psycopg2-binary = "^2.9.9"
channels = "4.0"
daphne = "4.0"
python-dotenv = "^1.0.1"
elasticsearch = "^8.15.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
